was changed from asimrc.template to asimrc to make things
easier for the .deb install procedure. It is still just called
asimrc in etc/.

Moved the simple template workspace from etc/asim/ws to 
share/asim/ws, since it is not really a configuration file
and it was complicating the debinan installs. That change
reguired changes in configure.in, and various Makefiles, so
autoconf made lots of gratuituous changes.


----------
joel        Date: Wed May 19 15:21:32 EDT 2010  CSN: CSN-awb-378
                  Wed May 19 19:21:32 UTC 2010


Directory debian
 control                   Locally Modified          377 
 changelog                 Locally Modified          377 

Improvements to debian build mechanism.

Added distribution name to version and moved to 'main'. 
Also added some dependencies to control.

Builds seem to work for karmic and lucid, although there 
are still lots of complaints from lintian.

----------
joel        Date: Thu May 20 23:27:40 EDT 2010  CSN: CSN-awb-379
                  Fri May 21 03:27:40 UTC 2010


Directory .
 Makefile.in               Locally Modified          378 

Directory debian
 control                   Locally Modified          378 
 changelog                 Locally Modified          378 
 rules                     Locally Modified          378 

Directory .
 Makefile.am               Locally Modified          378 

Added a make target of install-package, which installs
the module pool (and base/) in $codedir, which is 
currently PREFIX/share/asim/<package>/<version>. The
debian install does that install so that one can
have the awb module pool even without checking out
the package.

Make a few other improvements for .deb creation.

----------
joel        Date: Sun May 23 15:44:21 EDT 2010  CSN: CSN-awb-380
                  Sun May 23 19:44:21 UTC 2010


Directory debian
 control                   Locally Modified          379 

Added dependency on scons for debian package.